--- a/AA_Files/README
+++ b/AA_Files/README
@@ -6,10 +6,10 @@ Corrsponding nucleotide sequences for the Cassiopea transcriptome can be found h
 
 
 ..		
-Aala.06.genome.aa.gz	- Alatina alata Augustus predictions
+Aala.genome.faa.gz	- Alatina alata Augustus predictions
 Alatina_alata.transdecoder.faa.gz	- Alatina alata translated transcriptome
-Calvadosia_cruxmelitensis.v3.aa.gz	- Calvadosia cruxmelitensis Augustus predictions
-Cassiopea_xamachana.v1.aa.gz	- Cassiopea xamachana Augustus predictions
+Calvadosia_cruxmelitensis.v3.faa.gz	- Calvadosia cruxmelitensis Augustus predictions
+Cassiopea_xamachana.v1.faa.gz	- Cassiopea xamachana Augustus predictions
 Ccrux.Trinity.faa.gz	- Calvadosia cruxmelitensis translated transcriptome
-Cxam.HS.Trinity.transdecoder.faa.gz	- Cassiopea xamachana translated transcriptome
-Cxam.Scyph.transdecoder.faa.gz	- Cassiopea xamachana aposymbiotic polyp translated transcriptome
+Cxam.HS.Trinity.transdecoder-2.0.faa.gz	- Cassiopea xamachana translated transcriptome (version 2 - 12.15.18)
+Cxam.Scyph.Trinity.transdecoder-2.0.faa.gz	- Cassiopea xamachana aposymbiotic polyp translated transcriptome (version 2 - 12.15.18)
